--- a/.env.example
+++ b/.env.example
@@ -1,39 +1,97 @@
-APP_NAME=Laravel
+#----------------------------------------------------------
+# Application
+#----------------------------------------------------------
+APP_NAME="PHP AJAX"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_LOG=daily
+APP_LOG_LEVEL=debug
+APP_URL=http://10.11.0.11:8008
+APP_TIMEZONE=America/Sao_Paulo
+APP_LANGUAGE=en
+APP_CODE=TE
+APP_LOG_MAXIMUM_DAYS=7
+APP_PREFIX=
 
-LOG_CHANNEL=stack
-
+#----------------------------------------------------------
+# Database
+#----------------------------------------------------------
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=10.11.0.3
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE='php_ajax'
+DB_USERNAME=''
+DB_PASSWORD=''
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-SESSION_DRIVER=file
-SESSION_LIFETIME=120
-QUEUE_DRIVER=sync
+#----------------------------------------------------------
+# Unit tests database configurations
+#----------------------------------------------------------
+TEST_DB_CONNECTION=
+TEST_DB_HOST=
+TEST_DB_PORT=
+TEST_DB_DATABASE=name_dabtabase_test
+TEST_DB_USERNAME=
+TEST_DB_PASSWORD=
+TEST_DB_CHARSET=utf8
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
+#----------------------------------------------------------
+# JWT configurations
+#----------------------------------------------------------
+JWT_SECRET=random
+JWT_KEYS="/var/www/html/keys" # Full path
+JWT_TTL=1440
 
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+#----------------------------------------------------------
+# Driver configurations
+#----------------------------------------------------------
+# BROADCAST_DRIVER=log
+# CACHE_DRIVER=redis
+# SESSION_DRIVER=redis
+# QUEUE_DRIVER=redis
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
+#----------------------------------------------------------
+# Redis configurations
+#----------------------------------------------------------
+APP_REDIS_HOST=10.11.0.5
+# APP_REDIS_PASSWORD=null
+APP_REDIS_PORT=6379
+APP_REDIS_DATABASE=7
+APP_REDIS_PREFIX="php_ajax:"
 
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+#----------------------------------------------------------
+# AWS configurations
+#----------------------------------------------------------
+# AWS_KEY=
+# AWS_SECRET=
+# AWS_REGION=us-east-1
+# AWS_BUCKET_REPORTS=
+
+#----------------------------------------------------------
+# GSC configurations
+#----------------------------------------------------------
+# STORAGE_SERVICE=gs
+# GSC_BUCKET_REPORTS=
+# GOOGLE_APPLICATION_CREDENTIALS=/var/www/html/keys/.json
+
+#----------------------------------------------------------
+# Mailer configurations
+#----------------------------------------------------------
+# MAIL_DRIVER=smtp
+# MAIL_HOST=smtp.mailtrap.io
+# MAIL_PORT=2525
+# MAIL_USERNAME=
+# MAIL_PASSWORD=
+# MAIL_ENCRYPTION=null
+# MAIL_FROM_ADDRESS="seuemail@email.com.br"
+# MAIL_FROM_NAME="Template PHP"
+
+#----------------------------------------------------------
+# Pubsub configurations
+#----------------------------------------------------------
+# PUBSUB_CONNECTION=gcloud
+# GOOGLE_CLOUD_KEY_FILE=/var/www/html/keys/*.json
+# GOOGLE_CLOUD_PROJECT_ID=
+# PUBSUB_EMULATOR_HOST=10.11.0.7:8085
+# PUBSUB_IMPORTED_PRODUCTS_TOPIC=template_php
+# UPDATE_IMPORTED_PRODUCTS_INTERVAL=300
